--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.docker.compose.enabled=false
+#spring.datasource.url=${VAR_DATA_SOURCE_URL}
+#spring.datasource.username=${VAR_DATA_SOURCE_USERNAME}
+#spring.datasource.password=${VAR_DATA_SOURCE_PASSWORD}
+#spring.datasource.driverClassName=
+#spring.jpa.hibernate.ddl-auto=${VAR_HIBERNATE_DLL}
