--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=artefactName
 
+#server.port=${VAR_PORT_BACKEND}
+server.max-http-header-size=20MB
+server.tomcat.max-swallow-size=10MB
+server.tomcat.max-http-post-size=10MB
+
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM 'classpath:init.sql'
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
