--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
+# Propiedades de Hibernate para mostrar SQL y formatearlo (útil para debug)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.docker.compose.enabled=false
 #spring.datasource.url=${VAR_DATA_SOURCE_URL}
@@ -17,3 +21,4 @@ spring.docker.compose.enabled=false
 #spring.datasource.password=${VAR_DATA_SOURCE_PASSWORD}
 #spring.datasource.driverClassName=
 #spring.jpa.hibernate.ddl-auto=${VAR_HIBERNATE_DLL}
+#spring.jpa.properties.hibernate.dialect=
