adding h2 ui and new exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
 spring.docker.compose.enabled=false
 #spring.datasource.url=${VAR_DATA_SOURCE_URL}
 #spring.datasource.username=${VAR_DATA_SOURCE_USERNAME}
