adding mongodb logging asyc

--- a/compose.yaml
+++ b/compose.yaml
@@ -16,3 +16,19 @@ services:
       - 'POSTGRES_USER=myuser'
     ports:
       - '5432'
+
+  mongodb:
+    image: mongodb/mongodb-community-server
+    container_name: mongo-container
+    restart: always
+    ports:
+      - "27017:27017" # Expose MongoDB on localhost:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin # Set the root username
+      MONGO_INITDB_ROOT_PASSWORD: password # Set the root password
+    volumes:
+      - mongodb_data:/data/db # Persist MongoDB data
+
+volumes:
+  mongodb_data:
+    driver: local
