--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,12 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# Configuración de MongoDB para Spring Data (el Appender no la usa directamente, pero es buena práctica tenerla)
+spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/log
+
+# Propiedad para el Appender de MongoDB
+logging.mongodb.collection-name=application_logs
+
 spring.docker.compose.enabled=false
 #spring.datasource.url=${VAR_DATA_SOURCE_URL}
 #spring.datasource.username=${VAR_DATA_SOURCE_USERNAME}
@@ -25,3 +31,4 @@ spring.docker.compose.enabled=false
 #spring.datasource.driverClassName=
 #spring.jpa.hibernate.ddl-auto=${VAR_HIBERNATE_DLL}
 #spring.jpa.properties.hibernate.dialect=
+
