adding async logging

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
-# Propiedades de Hibernate para mostrar SQL y formatearlo (Ãºtil para debug)
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
@@ -19,12 +19,13 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 # Configuración de MongoDB para Spring Data (el Appender no la usa directamente, pero es buena práctica tenerla)
-spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/log
+spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/log?authSource=admin
+#spring.data.mongodb.uri=${VAR_MONGO_URI}
 
 # Propiedad para el Appender de MongoDB
 logging.mongodb.collection-name=application_logs
 
-spring.docker.compose.enabled=false
+spring.docker.compose.enabled=true
 #spring.datasource.url=${VAR_DATA_SOURCE_URL}
 #spring.datasource.username=${VAR_DATA_SOURCE_USERNAME}
 #spring.datasource.password=${VAR_DATA_SOURCE_PASSWORD}
