--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,16 +9,18 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;INIT=RUNSCRIPT FROM '
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always 
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.data-locations=file:src/main/dev/data.sql
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-# Configuración de MongoDB para Spring Data (el Appender no la usa directamente, pero es buena práctica tenerla)
 spring.data.mongodb.uri=mongodb://admin:password@localhost:27017/log?authSource=admin
 #spring.data.mongodb.uri=${VAR_MONGO_URI}
 
